--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -5,8 +5,8 @@
     box-sizing: border-box;
 }
 body{
-    overflow-x: hidden; 
-    font-family: 'Fira Sans', sans-serif;
+    font-family: 'Fira Sans';
+    overflow-x: hidden;
 }
 #nav-up{
     width: 100%;
@@ -33,62 +33,54 @@ nav{
 #nav{
     width: 100%;
     height: 100px;
-    background: white;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    background:#FFF;
     box-shadow: 0 0 3px 0 gray;
     position: absolute;
-    z-index: 100;    
+    z-index: 100;
+    padding: 0 100px;
 }
 .logo, .logo img{
     width: 250px;
     height: 90px;
-    margin-left: 60px;
 }
-.enlaces{
-    margin-right: 100px;
+.enlaces ul{
+    display: flex;
+    list-style: none;
 }
-.enlaces li a{
-    font-size: 12px;
+.enlaces > ul > li > a{
+    padding: 40px 17px;
+}
+.enlaces a{
+    display: block;
     text-decoration: none;
     color: black;
-    font-weight: 900;
+    font-size: 13px;
 }
-.enlaces li{
-    padding: 40px 18px;
-    list-style: none;
-    float: left;
-    cursor: pointer;
-}
-.enlaces li:hover > a{
-    color: #9B0000;
-}
-.enlaces #desplegable{
+.enlaces ul ul{
+    width: 200px;
+    background: #F9F9F9;
+    box-shadow: 0 0 30px -10px gray;
     position: absolute;
-    width: 100px;
-    height: 100px;
-    top:100px;
-    left: 760px;
-    background: white;
-    transition: .5s;
     display: none;
 }
-.enlaces #desplegable li{
-    list-style: none;
-    padding: 12px 15px;
+.enlaces ul ul a{
+    padding: 12px;
 }
-#desplegar:hover > #desplegable{
-    display: flex;
+.enlaces a:hover{
+    color: darkred;
 }
-.enlaces #desplegable2 li{
-    list-style: none;
-    padding: 12px 15px;
+.enlaces a span{
+    display: none;
+}
+.enlaces ul li:hover ul{
+    display: block;
 }
 .icono{
     display: none;
-    font-size: 24px;
-    padding: 21.5px 20px;
+    font-size: 30px;
 }
 .texto{
     width: 100%;
@@ -154,7 +146,7 @@ nav{
 }
 #left{
     width: 47%;
-    transform: translateX(-300px);
+    transform: translateX(-47%);
     opacity: 0;
     position: absolute;
 }
@@ -172,10 +164,10 @@ nav{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-size: 5px;
     color:white;
     border-radius: 50%;
-    text-align: right;
+    font-size: 7px;
+    font-weight: 600;
 }
 #left .left{
     width: 100%;
@@ -248,6 +240,8 @@ nav{
     height: auto;
     padding: 70px 0 0;
     background: #141212;
+    display: flex;
+    justify-content: space-around;
 }
 #footer-left{
     width: 40%;
@@ -340,78 +334,105 @@ nav{
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
     background-color: #fff;
     animation-name: fadeInDown;
-    animation-duration: 0.8s;
+    animation-duration: .8s;
 }
 
-@media screen and (min-width: 900px){
-    #nav-up p{
-        margin-left: 80px;
-        font-size: 12px;
-        font-weight: 400;
+@keyframes fadeInDown{
+    0%{
+        opacity:0;
+        -webkit-transform:translate3d(0,-100%,0);
+        transform:translate3d(0,-100%,0)
     }
+    100%{
+        opacity:1;
+        -webkit-transform:none;transform:none
+    }
+}
+@media screen and (max-width: 1240px){
+    #nav{
+        padding: 0 50px 0 100px;
+    }
+    .enlaces > ul > li > a{
+        padding: 35px 10px;
+    }
+}
+@media screen and (max-width: 1024px){
     .icono{
         display:block;
         cursor: pointer;
-        z-index: 10;
     }
     .enlaces{
-        width: 100vw;
-        position:fixed;
-        top:145px;
-        background:#2c3e50;
-        left:0;
-        height: 0;
-        transition: 1s;
-        overflow:hidden;
-        display: flex;
-        flex-direction: column;
-    }
-    .enlaces li{
-        clear: both;
-    }
-    .enlaces ul li{
-        display:block;
-        width:100%;
-        height: 30px;
-        padding: 20px;
-        text-align: center;
-        background: #34495a;
-        color:white;
-    }
-    #desplegable{
-        display: none;
-    }
-    #desplegar:hover > #desplegable{
-        display: inline;
-        position: relative;
-        top: 0;
+        position: absolute;
+        top: 100px;
         left: 0;
+        width: 100%;
+        transition: 1s;
+        height: 0px;
+        overflow-y: scroll;
+        background: #141212;
+    }
+    .enlaces > ul{
+        display: block;
+        text-align: center;
+    }
+    .enlaces ul ul{
+        display: none;
+        width: 100%;
+        background: #4B4545;
+        box-shadow: none;
+        position: relative;
+        transition: 1s;
+    }
+    .enlaces ul li:hover ul{
+        display: none;
+        position: relative;
+    }
+    .enlaces a{
+        color: white;
+    }
+    .enlaces > ul > li > a{
+        padding: 20px; 
+    }
+    .enlaces a span{
+        position: absolute;
+        right: 20px;
+        font-size: 20px;
+        display: inline-flex;
+    }
+    .contenedor{
+        width: 100%;
+        padding: 90px 20px;
+        text-align: center;
     }
     #cont-form{
+        height: auto;
         display: block;
-        height: 500px;
     }
     #left{
-        width: 80%;
-        margin: 10px auto;
+        width: 100%;
+        margin-bottom: 20px;
     }
     #right{
-        width: 80%;
-        margin: 0 auto;
+        width: 100%;
+    }
+    #footer{
+        padding: 70px 50px 0;
+        flex-direction: column;
     }
     #footer-left{
         width: 100%;
-        padding: 0 60px;
-        margin-bottom: 40px;
+        padding: 0;
+        text-align: left;
+        margin-bottom: 30px;
     }
     #footer-right{
         width: 100%;
-        padding: 0 60px;
+        padding: 0;
+        text-align: left;
     }
-    
 }
-@media screen and (max-width: 600px){
-   #nav-up p{
-    margin-left: 0px;
-}
+@media screen and (max-width: 400px){
+    #footer{
+        padding: 50px 10px;
+    }
 }
